@@ -2,6 +2,8 @@
 
 	* src/changelogupdate.sh: only writing staged files to the changelog
 
+	* src/mountasuser.sh: convenience functions and additional error checking
+
 2014-11-22	Erik E. Lorenz	<erik.e.lorenz@gmail.com>
 
 	* src/watchscroll.sh: watch-like capabilities, but with scrolling
